gem2deb (0.26.3) UNRELEASED; urgency=medium

  * dh-make-ruby:
    - with -w/--overwrite, never overwrite debian/copyright, since it will be
      always replace a human-reviewed debian/copyright with a completely dumb
      boilerplate.

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 02 Mar 2016 16:26:58 -0300

gem2deb (0.26.2) unstable; urgency=medium

  * dh-make-ruby: bump Standards-Version in generated debian/control files to
    3.9.7
  * debian/control: bump Standards-Version to 3.9.7; no changed needed.
  * gem_installer_test: fix assertion to check the right value when multiple
    Ruby versions are enabled.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 26 Feb 2016 11:26:49 -0300

gem2deb (0.26.1) unstable; urgency=medium

  * metadata: resist gemspec.bindir not being a String (Closes: #814973)

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 17 Feb 2016 08:04:36 -0200

gem2deb (0.26) unstable; urgency=medium

  * dh_ruby:
    - When installing executables, consider gemspec.bindir for installing
      executables, for when they are in a directory different than bin/
    - When installing executables, consider gemspec.executables for the case
      where not all scripts under the bindir should be installed.

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 15 Feb 2016 18:04:52 -0200

gem2deb (0.25.2) unstable; urgency=medium

  * gem2deb-test-runner: put directories under debian/ first in GEM_PATH to
    make sure dependency resolution uses the metadata installed during the
    build with precedence over metadata already installed in the system. Fixes
    building packages on non-clean systems where the package you are building
    may have a version already installed.
  * dh_ruby --gem-install:
    - handle not installing test files when they are explicitly listed in the
      gemspec under `spec.test_files = ...`.

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 14 Feb 2016 13:42:40 -0200

gem2deb (0.25.1) unstable; urgency=medium
